--- a/GenesisFEPortalWeb.Web/Components/_Imports.razor
+++ b/GenesisFEPortalWeb.Web/Components/_Imports.razor
@@ -9,6 +9,7 @@
 @using Microsoft.JSInterop
 @using GenesisFEPortalWeb.Web
 @using GenesisFEPortalWeb.Web.Components
+@using GenesisFEPortalWeb.Web.Components.Layout
 
 @* Library for use radzen*@
 @using Radzen
